# todo

./: .env  Cargo.toml  README.md
src/: main.rs  models.rs  schema.rs  state.rs
static/scripts/: todo.js
templates/: base.html  index.html  user.html
templates/todo/: create.html  edit.html  list.html  show.html
